# ebsd_services

./: .env.example  .gitignore  Caddyfile  Readme.md  docker-compose.yml
ML_backend/: Dockerfile  auth.py  ebsd_store.py  ebsd_utils.py  main.py  ppt_report.py  pyproject.toml
ML_backend/typings/defdap/: __init__.pyi  _accelerated.pyi  base.pyi  crystal.pyi  crystal_utils.pyi  ebsd.pyi  experiment.pyi  file_readers.pyi  file_writers.pyi  plotting.pyi  quat.pyi  utils.pyi
cpp_backend/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg-configuration.json  vcpkg.json
cpp_backend/include/: ebsd.h  grains.h  orientations.h  svm_nestedCV.h  utils.h
cpp_backend/src/: grain.cpp  grains.cpp  ipf_map.cpp  main.cpp  orientation.cpp  orientations.cpp  utils.cpp
cpp_backend/vcpkg-triplets/: linux-dynamic.cmake
docs/: USER_MANUAL.md  pandoc-header.tex
frontend/: app.vue  nuxt.config.ts  package.json
frontend/components/: GrainCdfChart.vue  IpfMapGrid.vue  TriangleChart.vue  ninepos.vue
frontend/composables/: useAuth.ts
frontend/legacy/: analysis-index.vue
frontend/lib/: auth.ts
frontend/middleware/: auth.global.ts  auth.ts
frontend/pages/: index.vue  login.vue  report.vue
frontend/plugins/: auth.client.ts
go_backend/: .gitignore  Dockerfile  Readme.md  go.mod  go.sum  main.go
go_backend/auth/: oauth.go
go_backend/db/: db.go
go_backend/ent/: chatsession.go  chatsession_create.go  chatsession_delete.go  chatsession_query.go  chatsession_update.go  client.go  ent.go  message.go  message_create.go  message_delete.go  message_query.go  message_update.go  mutation.go  runtime.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
go_backend/ent/chatsession/: chatsession.go  where.go
go_backend/ent/enttest/: enttest.go
go_backend/ent/hook/: hook.go
go_backend/ent/message/: message.go  where.go
go_backend/ent/migrate/: schema.go
go_backend/ent/predicate/: predicate.go
go_backend/ent/runtime/: runtime.go
go_backend/ent/schema/: chatsession.go  message.go  user.go
go_backend/ent/user/: user.go  where.go
go_backend/route/: msg.go  user.go
go_backend/routeRegister/: routeRegister.go
train/: main.py  pyproject.toml
