[project]
name = "ml-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "defdap>=1.1.2",
    "fastapi>=0.128.4",
    "joblib>=1.5.3",
    "psycopg2-binary>=2.9.11",
    "python-pptx>=1.0.2",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.39.0",
]
